--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<h1>Food</h1>
-	<p><span class="negrito">Rango</span>, o rango estava uma delicia, adorei comer arroz e feijão com bife.</p>
+	<p><span class="negrito">Rango</span>, o rango estava uma delicia, adorei comer arroz e feijão com bife.Supinta mesmo!</p>
 	<p class="negrito" id="destaque">E depois a <a href="https://www.google.com.br/search?q=sobremesa&safe=off&source=lnms&tbm=isch&sa=X&ved=0ahUKEwjEp-KfgPvVAhVBwVQKHfCjA_wQ_AUICigB&biw=1242&bih=602">sobremesa</a> era sorvete com calda de chocolate, delicioso.</p>
 </body>
 </html>
