--- a/index.html
+++ b/index.html
@@ -9,5 +9,16 @@
 	<h1>Food</h1>
 	<p><span class="negrito">Rango</span>, o rango estava uma delicia, adorei comer arroz e feijão com bife.</p>
 	<p class="negrito" id="destaque">E depois a <a href="https://www.google.com.br/search?q=sobremesa&safe=off&source=lnms&tbm=isch&sa=X&ved=0ahUKEwjEp-KfgPvVAhVBwVQKHfCjA_wQ_AUICigB&biw=1242&bih=602">sobremesa</a> era sorvete com calda de chocolate, delicioso.</p>
+	<div class="container">
+	<div class="coluna" id="coluna1">
+	<p>Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os embaralhou para fazer um livro de modelos de tipos. Lorem Ipsum sobreviveu não só a cinco séculos, como também ao salto para a editoração eletrônica, permanecendo essencialmente inalterado. Se popularizou na década de 60, quando a Letraset lançou decalques contendo passagens de Lorem Ipsum, e mais recentemente quando passou a ser integrado a softwares de editoração eletrônica como Aldus PageMaker.</p>
+
+	<p>In hac habitasse platea dictumst.<img id="imagem" src="cafe.jpg" height="80px"> Nunc ultrices vel leo nec pellentesque. Sed consequat euismod porttitor. Duis dignissim urna ut eros finibus, vitae feugiat libero ultricies. Duis scelerisque nunc id suscipit egestas. Cras non urna at augue egestas consectetur. In hac habitasse platea dictumst.</p></div>
+	<div class="coluna" id="coluna2">
+	<p>Etiam felis metus, eleifend at enim non, euismod iaculis magna. Vestibulum id leo sit amet purus fermentum pretium id et felis. Nam varius, felis id tempus tempus, libero diam efficitur dolor, quis dapibus elit diam at massa. Phasellus nec sagittis libero. Phasellus dignissim finibus odio, at mollis ex accumsan non. Maecenas tempor ante sit amet lorem auctor hendrerit. Ut et lectus quis metus ultricies sodales a eget dui. Fusce venenatis nisi sed molestie pharetra.</p>
+
+	<p>Nulla scelerisque tortor id tortor mollis, eget placerat dui maximus. Sed luctus posuere placerat. Duis malesuada lobortis velit volutpat malesuada. Cras maximus vehicula erat, sed facilisis arcu laoreet ut. Aliquam id dolor mollis, ornare lectus a, placerat ante. Aliquam tincidunt rhoncus felis, non commodo quam convallis eget. Suspendisse eu dapibus nisi. Vestibulum id magna massa. Curabitur venenatis aliquam ante, a tincidunt enim lacinia finibus. Phasellus vel felis sit amet mauris feugiat sollicitudin ut ut enim. Cras pharetra felis et nisl aliquet, ac semper ligula convallis.</p>
+	</div>
+	</div>
 </body>
 </html>
